// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> snapshots it renders with data attributes 1`] = `
<div
  className="mfui-tile mfui-tile_theme_light mfui-tile_radius_default mfui-tile_shadow_zero"
  data-test="test"
  onClick={[Function]}
/>
`;

exports[`<Tile /> snapshots renders component 1`] = `
<div
  className="mfui-tile mfui-tile_theme_light mfui-tile_radius_default mfui-tile_shadow_zero"
  onClick={[Function]}
>
  Some test content
</div>
`;

exports[`<Tile /> snapshots renders component with props 1`] = `
<div
  className="mfui-tile mfui-tile_theme_dark mfui-tile_radius_rounded mfui-tile_shadow_pressed mfui-tile_pointer mfui-tile_interactive test-class"
  onClick={[Function]}
>
  <a
    className="mfui-tile__link"
    href="test-link"
    target="_blank"
  >
    Some test content
  </a>
</div>
`;
